[package]
name = "local-outlier-probabilities"
version = "1.0.0"
edition = "2021"
description = "Local Outlier Probabilities (LoOP) calculation"
repository = "https://github.com/medbioinf/loop-rs"
homepage = "https://github.com/medbioinf/loop-rs"
documentation = "https://github.com/medbioinf/loop-rs"
license-file = "LICENSE"

[dependencies]
kdtree = "0.7.0"
ndarray = "0.16.1"
num-traits = "0.2.19"
thiserror = "2.0.12"

[dev-dependencies]
ndarray-stats = "0.6.0"
polars = { version = "0.47.1", features = ["ndarray"] }
